# nn-pytorch

./: .gitignore  README.md  pyproject.toml
nn_pytorch/: mnist.ipynb
