[project]
name = "nn-pytorch"
version = "0.1.0"
description = ""
authors = [
    {name = "WoutVossen",email = "vossen.w@hotmail.com"}
]
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (==2.2.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

